--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -175,7 +175,7 @@
     font-size: 20px;
 }
 
-.post-list {
+.post-list, .lesson-link, .test-link {
     margin-left: 0;
     list-style: none;
 
@@ -184,12 +184,12 @@
     }
 }
 
-.post-meta {
+.post-meta, .lesson-meta, .test-meta {
     font-size: $small-font-size;
     color: $grey-color;
 }
 
-.post-link {
+.post-link, .lesson-link, .test-link {
     display: block;
     font-size: 24px;
 }
@@ -199,11 +199,11 @@
 /**
  * Posts
  */
-.post-header {
+.post-header, .lesson-header, .test-header {
     margin-bottom: $spacing-unit;
 }
 
-.post-title {
+.post-title, .lesson-title, .test-title {
     font-size: 42px;
     letter-spacing: -1px;
     line-height: 1;
@@ -213,7 +213,7 @@
     }
 }
 
-.post-content {
+.post-content, .lesson-content, .test-content {
     margin-bottom: $spacing-unit;
 
     h2 {
