Adding Lesson SE3

--- a/_layouts/howto.html
+++ b/_layouts/howto.html
@@ -2,9 +2,8 @@
 layout: default
 ---
 <article class="howto">
-
   <header class="howto-header">
-    <h1 class="howto-title">{{ howto.title }}</h1>
+    <h1 class="howto-title">{{ page.title }}</h1>
   </header>
 
   <div class="howto-content">
